# Converter

./: .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
converter/: Dockerfile  config.py  main.py  pyproject.toml  pytest.ini
converter/app/: config.py  exc.py  version.py
converter/app/api/: __init__.py  converter.py  deps.py  feedback.py  format.py  user.py  user_action.py
converter/app/db/migrations/: alembic.ini  env.py
converter/app/entity/: __init__.py  converter.py  enums.py  feedback.py  format.py  user.py  user_action.py
converter/app/repository/: __init__.py
converter/app/repository/sqlalchemy/: __init__.py  mixins.py  models.py  sarepo.py  sarepositories.py  (+1 more)
converter/app/service/: __init__.py  converter.py  feedback.py  format.py  user.py  user_action.py
converter/app/utils/: headers.py
converter/configs/: cross_formats.json  formats.json
converter/db/migrations/: env.py  ext.py
converter/entity/: __init__.py  enums.py  state.py  user_data.py
converter/routers/: __init__.py  middleware.py
converter/scripts/: fill_formats.py
converter/services/: converter.py  to_pdf.py
tg_bot/: Dockerfile  main.py  pyproject.toml
tg_bot/app/: config.py  logger.py
tg_bot/app/entity/: __init__.py  enums.py  format_cross.py  mixins.py  state.py  user.py  user_action.py  user_data.py
tg_bot/app/routers/: __init__.py  middleware.py
tg_bot/app/service/: __init__.py  api.py  converter.py  state.py
tg_bot/app/services/: api.py  converter.py
tg_bot/app/utils/: command.py  keybord.py
tg_bot/tests/: conftest.py
(+4 files in other folders)
